test/files/neg/t3773.scala
object t {
  val m = Map(1 -> "one")
  for ((v, t) <- m.elements) ()
}

