test/files/neg/t3773.check
t3773.scala:3: error: method elements in trait IterableLike is deprecated: use `iterator` instead
  for ((v, t) <- m.elements) ()
                   ^
one error found
